2005-08-29  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-xfer.c: (copy_directory): set source/target
	URI before processing each of the copied files. Fixes #310061.

2005-08-28  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-hal-mounts.c:
	(_gnome_vfs_hal_mounts_modify_drive),
	(_gnome_vfs_hal_mounts_modify_volume):
	Check both the listed device node and its resolved link 
	target against HAL, before adding as a new device.
	Patch from Robert Love <rml@novell.com>. Fixes bug #314490.

2005-08-29  Tor Lillqvist  <tml@novell.com>

	* gnome-vfs-zip.in: Include also documentation in the developer
	zipfile.

2005-08-24  Christian Kellner  <gicmo@gnome.org>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.9.92 ===

2005-08-24  Christian Kellner  <gicmo@gnome.org>

	* NEWS: 
	Update for release.
	
	* configure.in:
	Bump to version 2.11.92

2005-08-23  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-hal-mounts.c:
	(_hal_add_drive_without_volumes), (_hal_add_volume): 
	Honour hal's storage.eject_required flag.
	This fixes bug #314272

2005-08-23  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-mime-info.c: (add_data_dir),
	(gnome_vfs_mime_init): Use g_get_user_data_dir () instead
	of a home grown solution. 
	This fixes bug #168549

2005-08-23  Stepan Kasal  <kasal@ucw.cz>

	* acinclude.m4 (LIBNEON_SOURCE_CHECKS): NEON_SSL is an autoconf
	macro in current version of neon; we have to temporarily redefine
	it if we want to use it as AC_DEFINEd symbol.

	* configure.in: Improve quoting and other cosmetic changes.

2005-08-10  David Zeuthen  <davidz@redhat.com>

	* libgnomevfs/gnome-vfs-hal-mounts.c:
	(_gnome_vfs_hal_mounts_modify_volume): Handle the drives that HAL
	doesn't detect media for (e.g. IDE Zip drives, legacy x86 floppies)

2005-07-28  Tor Lillqvist  <tml@novell.com>

	* imported/neon/Makefile.am (libneon_la_LDFLAGS): As libneon is a