@@ -1,3 +1,9 @@
+2005-08-31  Alexander Larsson  <alexl@redhat.com>
+
+	* libgnomevfs/gnome-vfs-mime-info.c:
+	* libgnomevfs/gnome-vfs-mime.c:
+	Wrap all remaining calls to xdg_mime with the mime lock. #170947
+
 2005-08-29  Christian Neumair  <chris@gnome-de.org>
 
 	* libgnomevfs/gnome-vfs-xfer.c: (copy_directory): set source/target
